--- a/seychess/chess-style.css
+++ b/seychess/chess-style.css
@@ -19,7 +19,7 @@ body {
     position: relative;
     height: 100vh;
     background: linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, #000), 
-                url('your-background-image.jpg') no-repeat center center/cover;
+                url('bg-image.jpg') no-repeat center center/cover;
     display: flex;
     align-items: center;
     justify-content: center;
